--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="s6j-dI-sNB" id="cc0-aR-8RP"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="f3h-ao-ILM"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="f3h-ao-ILM">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="FvM-8A-2cc">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addBUttonPressed:" destination="s6j-dI-sNB" id="pVS-xy-jyH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8wG-bd-vuw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
